# progressive-stable-diffusion

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: train.yaml  train_classifier.yaml  train_classifier_regression.yaml  train_ip.yaml
configs/evaluation_configs/: 47xp2d1b_no_routing.yaml  iln5rbqn_all.yaml  ouba7bp1_no_purifier_no_route.yaml  rx8g05qi_no_purifier.yaml  uqqx9kg9_all.yaml  vv9rajz6_all.yaml
scripts/: compare_ip_checkpoints.sh  compute_leace_projection.py  create_paper_figure.py  run_augment_sweep.sh  run_evaluation.sh  run_inference.sh  run_train.sh  run_train_ip.sh
src/callbacks/: ema_callback.py
src/classification/: __init__.py  dataset.py  model.py  model_regression.py  train.py  train_regression.py
src/data/: datamodule.py  datamodule_ip.py
src/models/: attention_processor.py  attention_processor_base.py  attention_processor_routing_gates.py  diffusion_module.py  diffusion_module_ip.py  feature_purifier.py  image_encoder.py  losses.py  lr_scheduler.py  ordinal_embedder.py
src/models/unet/: __init__.py  unet.py
src/models/vae/: __init__.py  vae.py
src/pipelines/: evaluation_pipeline.py  evaluation_pipeline_ip_compare.py  evaluation_pipeline_ip_patient.py  inference_pipeline.py  inference_pipeline_ip.py  inference_pipeline_ip_data_augment.py  training_pipeline.py  training_pipeline_ip.py
src/pipelines/evaluation/: evaluation_pipeline.py  evaluation_pipeline_ip_compare.py  evaluation_pipeline_ip_patient.py  save_eval_samples_pipeline.py
src/pipelines/inference/: inference_pipeline.py  inference_pipeline_ip.py  inference_pipeline_ip_data_augment.py  inference_pipeline_ip_p2p.py  inference_pipeline_ip_with_guidance.py
src/pipelines/training/: training_pipeline.py  training_pipeline_ip.py
